[package]
name = "cbindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cbindgen = "0.24.3"
toml = "0.7.3"

[lib]
crate-type = ["staticlib"]
